# SnapMark

./: .gitignore  LICENSE  NOTICE.md  README.md  README_DE.md  README_EN.md  README_FR.md  README_JA.md  README_KO.md  aperture.html  index.html  motion-board.html  package.json  vite.config.ts
.github/: FUNDING.yml
.github/workflows/: build.yml
docs/: SCREENSHOT_FEATURE.md  USER_GUIDE.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/locale/en.lproj/: InfoPlist.strings
src-tauri/locale/zh-Hans.lproj/: InfoPlist.strings
src-tauri/src/: lib.rs  main.rs  screenshot.rs  tray.rs
src/components/: AboutPage.tsx  LanguageSetting.tsx  ScreenshotOverlay.tsx  ScreenshotToggle.tsx  SettingField.tsx  Settings.tsx  ShortcutField.tsx
src/contexts/: SnackbarContext.tsx
src/hooks/: useAuth.ts  useDrawingSettings.ts  useKeyboardSettings.ts  useMouseSettings.ts  useTray.ts
src/i18n/: index.ts
src/i18n/locales/: de-DE.json  en-US.json  es-ES.json  fr-FR.json  ja-JP.json  ko-KR.json  zh-CN.json  zh-TW.json
src/pages/aperture/: App.tsx
src/pages/motion-board/: App.tsx  main.tsx
src/pages/motion-board/animation/: mouse.tsx
src/store/: auth.ts  screenshot.ts  settings.ts
